<resources>
    <string name="app_name">Blink</string>
    <string name="str_not_login" translatable="false">로그인</string>
    <string name="str_name" translatable="false">이름</string>
    <string name="str_id" translatable="false">아이디</string>
    <string name="str_password" translatable="false">비밀번호</string>
    <string name="str_signup" translatable="false">회원가입</string>
    <string name="str_hint_name" translatable="false">이름을 입력하세요.</string>
    <string name="str_hint_id" translatable="false">아이디를 입력하세요.</string>
    <string name="str_hint_password" translatable="false">비밀번호를 입력하세요.</string>
    <string name="str_login" translatable="false">님\n환영합니다</string>
    <string name="str_feed_more" translatable="false">더보기</string>
    <string name="str_feed_folding" translatable="false">접기</string>
    <string name="str_toast_check" translatable="false">입력되지 않은 정보가 있습니다</string>
    <string name="str_toast_login_success" translatable="false">로그인성공</string>
    <string name="str_toast_check_pw" translatable="false">비밀번호를 입력해주세요</string>
    <string name="str_toast_check_id" translatable="false">아이디를 입력해주세요</string>
    <string name="str_toast_check_idpw" translatable="false">아이디/비밀번호를 입력해주세요</string>
    <string name="str_toast_check_user" translatable="false">일치하는 회원정보가 없습니다</string>
    <string name="str_valid_check_id" translatable="false">중복체크</string>
    <string name="str_valid_check_please" translatable="false">ID 중복체크를 해주세요</string>
    <string name="str_valid_check_existid" translatable="false">ID가 이미 존재합니다</string>
    <string name="str_valid_check_id_success" translatable="false">사용가능한 ID입니다</string>

    <!-- -->
    <string name="str_jisu_id" translatable="false">jisu</string>
    <string name="str_jisu_name" translatable="false">지수</string>
    <string name="str_jisu_des" translatable="false">리드보컬</string>
    <string name="str_jisu_mbti" translatable="false">ESTJ</string>
    <string name="str_jisu_coachella" translatable="false">북미 지역에서 개최되는 세계 최대 위상의 음악 페스티벌 "\'Coachella Festival\'"에 우리가 왔다!! </string>
    <string name="str_jisu_feed1" translatable="false">어제 인기가요 다들 잘 보셨나요?? 저번주에 저의 첫 솔로 앨범 타이틀 곡 "\'꽃\'"이 1등을 했다는 얘기를 많이 들어서 너무 벅차고 행복했어요</string>
    <string name="str_jisu_feed2" translatable="false">이곳의 날씨는 조금 쌀쌀하네요~ 한국은 덥겠죠? 벌써부터 그리운 나의 조국</string>

    <string name="str_jisu_comment1" translatable="false">우리가 접수하자!!!</string>
    <string name="str_jisu_comment2" translatable="false">꽃보다 이쁜 지수언니 축하합니다~~~</string>
    <string name="str_jisu_comment3" translatable="false">얼른 돌아와 언니 보고 싶다</string>

    <string name="str_jenny_id" translatable="false">jenny</string>
    <string name="str_jenny_name" translatable="false">제니</string>
    <string name="str_jenny_des" translatable="false">메인래퍼</string>
    <string name="str_jenny_mbti" translatable="false">INFP</string>
    <string name="str_jenny_feed1" translatable="false">너무 행복하고 기쁘고 감사한 하루였습니다💜 항상 행복을 안겨주는 우리 Blink 언제나 고맙고 사랑합니다.</string>
    <string name="str_jenny_feed2" translatable="false">캘빈클라인 화보 촬영! 멋지게 찍어주셔서 감사합니다</string>
    <string name="str_jenny_jacket" translatable="false">벌써 몇 년 전인지!! 멤버들과 항상 함께여서 행복했던 날들~</string>

    <string name="str_jenny_comment1" translatable="false">블랙핑크 포에버~~~</string>
    <string name="str_jenny_comment2" translatable="false">화보 넘 멋져</string>
    <string name="str_jenny_comment3" translatable="false">세월이 참 빠르다</string>

    <string name="str_rose_id" translatable="false">rose</string>
    <string name="str_rose_name" translatable="false">로제</string>
    <string name="str_rose_des" translatable="false">메인보컬</string>
    <string name="str_rose_mbti" translatable="false">ENFP</string>
    <string name="str_rose_feed_min" translatable="false">날도 좋고 신난다 페스티벌</string>
    <string name="str_rose_feed2" translatable="false">내사랑 가죽재킷~ 머리에 핀을 6개나 했어도 이뻐용? 그렇다고 해주세요</string>
    <string name="str_rose_feed3" translatable="false">항상 더 높은 곳을 바라보며 달려왔지만 정작 중요한 가치는 내 안에 있다</string>

    <string name="str_rose_comment1" translatable="false">나도 가고 싶다 페스티벌</string>
    <string name="str_rose_comment2" translatable="false">나도 가죽재킷 좋아하는데</string>
    <string name="str_rose_comment3" translatable="false">맞아 공감</string>

    <string name="str_lisa_id" translatable="false">lisa</string>
    <string name="str_lisa_name" translatable="false">리사</string>
    <string name="str_lisa_des" translatable="false">메인댄서</string>
    <string name="str_lisa_mbti" translatable="false">ESFJ</string>
    <string name="str_lisa_feed_min" translatable="false">베니스에서 대단한 사람들과 얼마나 잊지 못할 밤을 보냈는지</string>
    <string name="str_lisa_feed2" translatable="false">캘리포니아 햇살을 만끽하는중~</string>
    <string name="str_lisa_feed3" translatable="false">아르노는 내 연인일까요~ 절친일까요~?</string>

    <string name="str_lisa_comment1" translatable="false">너무 반가웠어</string>
    <string name="str_lisa_comment2" translatable="false">그리스도 좋아</string>
    <string name="str_lisa_comment3" translatable="false">연인에 한표!</string>

    <string name="my_page" translatable="false">이름: 김지수\n생일:1월3일\nmbti:ISTP\n소속사:YG</string>
    <string name="my_page_button" translatable="false">프로필 수정하기</string>
    <string name="toast_text" translatable="false">지금은 프로필 수정하실 수 없습니다!</string>


    <string name="str_no_data" translatable="false">데이타가 없습니다.</string>

    <string name="name" translatable="false">아이디 : 블랙핑크_제니\n나이 : 27\nMBTI : INFP </string>
    <string name="nameJ" translatable="false">아이디 : 블랙핑크_지수\n나이 : 28\nMBTI : ISTP </string>
    <string name="nameR" translatable="false">아이디 : 블랙핑크_리사\n나이 : 26\nMBTI : ESFJ </string>
    <string name="nameRR" translatable="false">아이디 : 블랙핑크_로제\n나이 : 26\nMBTI : ENFP </string>
    <string name="age" translatable="false">나이 : 21 </string>

    <string name="nameR_song" translatable="false">OnTheGround </string>
    <string name="nameJ_song" translatable="false">SOLO </string>
    <string name="nameL_song" translatable="false">MONEY  </string>
    <string name="nameJi_song" translatable="false">꽃 </string>
    <string name="songInt" translatable="false">솔로 아티스트로써 그녀의 매력을 한층 더 돋보이게 하며 클라이맥스를 장식하는 시원한
        드롭 파트는 새로운 쾌감을 선사한다.</string>
    <string name="songInt_J" translatable="false">YG의 대표 걸그룹 블랙핑크의 멤버 제니가 선보이는 첫 번째 싱글 SOLO는 블랙핑크로서 보여준 음악과는 또 다른 분위기를 자아낸다.</string>
    <string name="songInt_L" translatable="false">미니멀하면서도 세련된 감각이 돋보이는 힙합 곡이다. 솔로 아티스트로서 선명하고 화려한 매력을 배가시켰다. </string>
    <string name="songInt_ji" translatable="false">독특한 사운드의 베이스에 미니멀한 편곡이 더해진 중독성 강한 댄스곡 꽃 은 몽환적인 분위기의 타이틀곡이다. </string>

    <string name="mbti" translatable="false">MBTI</string>
</resources>