<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_page_button"
            android:onClick="showToast"
            android:textColor="@android:color/black"
            android:elevation="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="152dp"
                android:layout_height="163dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_jisu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/usernameTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="171dp"
                android:layout_height="169dp"
                android:layout_gravity="center"
                android:text="@string/my_page"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 여백 추가 -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- 테두리 추가 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <!-- 여백 추가 -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- ImageView와 TextView 묶음을 컨테이너로 묶음 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="195dp"
                app:srcCompat="@drawable/coachella"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/str_jisu_coachella"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <!-- 테두리 추가 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="195dp"
                app:srcCompat="@drawable/jisufeed1"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/str_jisu_feed1"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="195dp"
                app:srcCompat="@drawable/jisufeed2"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/str_jisu_feed2"
                android:layout_marginTop="8dp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
