<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FloatingActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rose_song1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="131dp"
        android:text="@string/nameR_song"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="220dp"
        android:layout_height="86dp"
        android:text="@string/songInt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageButton
        android:id="@+id/playbtn"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn"
        app:layout_constraintEnd_toStartOf="@+id/pausebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/pausebtn"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/pausebtn"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_pause"
        app:layout_constraintEnd_toStartOf="@+id/stopbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playbtn"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/stopbtn"
        android:layout_width="40dp"
        android:layout_height="27dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pausebtn"
        app:layout_constraintTop_toTopOf="@+id/pausebtn"
        app:tint="@color/black" />

    <View
        android:id="@+id/view1"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/pausebtn"
        android:background="@color/black"/>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/pausebtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/jennie_solo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameJ_song"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="222dp"
        android:layout_height="84dp"
        android:layout_marginEnd="12dp"
        android:text="@string/songInt_J"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/playbtn2"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn2"
        app:layout_constraintEnd_toStartOf="@+id/pausebtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/pausebtn2"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/pausebtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_pause"
        app:layout_constraintEnd_toStartOf="@+id/stopbtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playbtn2"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:tint="@color/black" />


    <ImageButton
        android:id="@+id/stopbtn2"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pausebtn2"
        app:layout_constraintTop_toTopOf="@+id/pausebtn2"
        app:tint="@color/black" />

    <View
        android:id="@+id/view"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/pausebtn2"
        android:background="@color/black"/>



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="105dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/lisa_money" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:layout_marginTop="9dp"
        android:text="@string/nameL_song"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="227dp"
        android:layout_height="62dp"
        android:text="@string/songInt_L"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/playbtn3"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn3"
        app:layout_constraintEnd_toStartOf="@+id/pausebtn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/pausebtn3"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/pausebtn3"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_media_pause"
        app:layout_constraintEnd_toStartOf="@+id/stopbtn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playbtn3"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/stopbtn3"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:background="@color/white"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pausebtn3"
        app:layout_constraintTop_toTopOf="@+id/pausebtn3"
        app:tint="@color/black" />

    <View
        android:id="@+id/view2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/pausebtn3"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="103dp"
        android:layout_height="101dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_goneMarginBottom="6dp"
        app:srcCompat="@drawable/jisoo_flower" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nameJi_song"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:text="@string/songInt_ji"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="483dp"
        app:layout_constraintStart_toEndOf="@id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <ImageButton
        android:id="@+id/playbtn4"
        android:layout_width="38dp"
        android:layout_height="35dp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="554dp"
        android:src="@android:drawable/ic_media_play"
        android:background="@color/white"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn4"
        app:layout_constraintEnd_toStartOf="@+id/pausebtn4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/pausebtn4"
        app:layout_constraintVertical_bias="0.0"
        />

    <ImageButton
        android:id="@+id/pausebtn4"
        android:layout_width="37dp"
        android:layout_height="34dp"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="554dp"
        android:src="@android:drawable/ic_media_pause"
        android:background="@color/white"
        app:tint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/stopbtn4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playbtn4"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <ImageButton
        android:id="@+id/stopbtn4"
        android:layout_width="36dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="556dp"
        android:src="@android:drawable/ic_delete"
        android:background="@color/white"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/pausebtn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pausebtn4"
        app:layout_constraintTop_toTopOf="@+id/pausebtn4"/>




</androidx.constraintlayout.widget.ConstraintLayout>